# AI_AGENTS

./: .gitignore
AI_Fitness_Agent/: .gitignore  Gradio_UI.py  app.py  prompt.yml  requirements.txt
langraph_agent/: app.py  retriever.py  tools.py
llama_index_agent/: app.py  ollama_app.py
terraform_agent/: pyproject.toml
terraform_agent/config/mappings/: gcp_to_aws.yaml
terraform_agent/src/tf_migrator/: __init__.py  main.py
terraform_agent/src/tf_migrator/agents/: __init__.py  analyzer.py  converter.py  orchestrator.py  planner.py  validator.py
terraform_agent/src/tf_migrator/core/: __init__.py  graph.py  models.py  parser.py  state.py
terraform_agent/src/tf_migrator/mappings/: loader.py  resolver.py
terraform_agent/src/tf_migrator/tools/: __init__.py  file_ops.py  search.py  terraform.py
terraform_agent/src/tf_migrator/utils/: __init__.py  logging.py  templates.py
terraform_agent/tests/: conftest.py  test_converter.py  test_parser.py
